more work on limitations

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.59 2003-01-17 00:42:07 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.60 2003-01-17 05:54:11 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -377,16 +377,15 @@ polygon offset or line stippling: see sections~\ref{sec:gl2psText},
 Other limitations include:
 \begin{itemize}
 \item 
-Rendering large and/or complicated scenes is slow, and will always
-be. Vector-based images are not destined to replace bitmaps. They just offer
-an alternative when high quality (especially for 2D and small 3D plots) and
-ease of manipluation are important. Think for example about reusing a
-picture from a scientific paper you published a couple of years years ago,
-when you need to modify the labels, rescale the plot, change the colors,
-etc.
+Rendering large and/or complicated scenes is slow, and will always be. But
+vector-based images are not destined to replace bitmaps! They just offer an
+alternative when high quality (especially for 2D and small 3D plots) and
+ease of manipulation (how do you change the scale, the labels or the colors
+in a bitmap picture long after the picture was produced, and without
+altering its quality?) are important.
 \item
-Transparency is not supported yet. See the \dd{TODO} file for some insight
-on this topic.
+Transparency is not supported yet. See the \dd{TODO} file for some
+explanations why this may or may not be possible.
 \item
 GL2PS does not support textures, volumic rendering, fog effects, etc. One
 could imagine producing mixed mode vector/bitmap output, but this has not
