--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.62 2003-01-22 02:01:20 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.63 2003-01-22 02:33:55 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -359,8 +359,7 @@ disable the use of the Level 3 PostScript \dd{shfill} operator, i.e.\ add
 edit the output file a posteriori (just set \dd{/tryPS3shading} to
 \dd{false} in the PostScript file header).
 
-A complete example can be found in the distribution in the file
-\dd{gl2psTest.c}.
+A complete example (\dd{gl2psTest.c}) is included in the distribution.
 
 \section{Limitations}
 \label{sec:limitations}
