--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.64 2003-01-22 04:24:19 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.65 2003-01-30 17:10:16 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -432,8 +432,7 @@ GLpr library from CEI international (\url{http://www.ceintl.com/}; this
 product does not seem to be available anymore).
 
 Toby White (\email{tow@sdf.lonestar.org}) maintains a Python wrapper for
-\dd{GL2PS}, available at
-\url{http://www-theor.ch.cam.ac.uk/people/tow/software.html}.
+\dd{GL2PS}, available at \url{http://tow.freeshell.org/software.html}.
 
 \section{Versions}
 
