--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.66 2003-01-30 18:12:59 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.67 2003-01-31 02:27:14 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -378,7 +378,7 @@ Other limitations include:
 \item 
 Rendering large and/or complicated scenes is slow and/or can lead to large
 output files. This is normal: vector-based images are not destined to
-replace bitmaps. They just offer an alternative when high quality
+replace bitmap images. They just offer an alternative when high quality
 (especially for 2D and small 3D plots) and ease of manipulation (how do you
 change the scale, the labels or the colors in a bitmap picture long after
 the picture was produced, and without altering its quality?) are important.
