Cite Mark before Michael

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.68 2003-02-17 03:21:40 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.69 2003-02-20 04:12:00 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -434,10 +434,10 @@ improvement of \dd{GL2PS_BEST_ROOT}.
 \section{Links}
 \label{sec:links}
 
-Projects similar to \dd{GL2PS} include: Michael Sweet's GLP library
-(\url{http://www.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
-rendereps (\url{http://www.opengl.org/developers/code/mjktips/Feedback.html}); the
-GLpr library from CEI international (\url{http://www.ceintl.com/}; this
+Projects similar to \dd{GL2PS} include: Mark J. Kilgard's rendereps
+(\url{http://www.opengl.org/developers/code/mjktips/Feedback.html}); Michael
+Sweet's GLP library (\url{http://www.easysw.com/~mike/opengl/index.html});
+the GLpr library from CEI international (\url{http://www.ceintl.com/}; this
 product does not seem to be available anymore).
 
 \email{Toby White}{tow@sdf.lonestar.org} maintains a Python wrapper for
