--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.69 2003-02-20 04:12:00 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.70 2003-02-27 18:15:35 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -45,15 +45,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.73, 30 January 2003}
+\date{Version 0.74, ?? March 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.73.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.74.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.73.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.74.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -493,6 +493,7 @@ the code; added example program \dd{gl2psTest.c} to the distribution.
 \item[0.72] (Jan 21, 2003) Fixed crash in occlusion culling code; enhanced
 documentation.
 \item[0.73] (Jan 30, 2003) Minor code cleanup.
+\item[0.74] (Mar ??, 2003) Fix small memory leak in occlusion culling.
 \end{description}
 
 \end{document}
