--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.70 2003-02-27 18:15:35 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.71 2003-02-27 18:20:27 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -493,7 +493,7 @@ the code; added example program \dd{gl2psTest.c} to the distribution.
 \item[0.72] (Jan 21, 2003) Fixed crash in occlusion culling code; enhanced
 documentation.
 \item[0.73] (Jan 30, 2003) Minor code cleanup.
-\item[0.74] (Mar ??, 2003) Fix small memory leak in occlusion culling.
+\item[0.74] (Mar ??, 2003) Fixed small bug in occlusion culling code.
 \end{description}
 
 \end{document}
