--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.72 2003-03-04 21:19:11 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.73 2003-03-05 02:35:15 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -72,9 +72,10 @@ sorting algorithms capable of handling intersecting and stretched polygons,
 as well as non manifold objects.
 
 The library, written in C, is released under the GNU Library General Public
-License (see \url{http://www.gnu.org/} for more details), and is available
-at \url{http://www.geuz.org/gl2ps/}. Any corrections, questions or
-suggestions should be e-mailed to \email{geuz@geuz.org}{geuz@geuz.org}.
+License (see \url{http://www.gnu.org/licenses/lgpl.html} for more details),
+and is available at \url{http://www.geuz.org/gl2ps/}. Any corrections,
+questions or suggestions should be e-mailed to
+\email{geuz@geuz.org}{geuz@geuz.org}.
 
 The interface consists of ten functions, all beginning with the prefix
 \dd{gl2ps}. All the data structures and the symbolic constants peculiar to
